--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.5.1",
     "latest": "^0.2.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^9.17.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
